# dcap-ffi

./: Cargo.toml  README.md
data/: qeidentityv2.json  qeidentityv2_apiv4.json  tcbinfov2.json  tcbinfov3_00806f050000.json
src/: constants.rs  lib.rs  pccs.rs
